more just intro

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
   <!-- <body background="images/marbleWhite.jpg" class="img_img"> -->
       <div class="container_two">
-        <h1 class="edwinname"><a href="http://www.linkedin.com/in/eaudesign" target="_blank">EDWIN<br class="imac displaynone"> AU</a></h1><br>
+        <h1 class="edwinname"><a href="http://www.linkedin.com/in/eaudesign" target="_blank">EDWIN&nbsp;AU</a></h1><br>
         <div class="container_three">
           <h2 class="left button-row"><a href="#hello" target="" title="ABOUT ME"></a></h2>
           <h2 class="center button-row"><a href="#carousel" target="" title="PORTFOLIO"></a></h2>
