--- a/index.html
+++ b/index.html
@@ -265,26 +265,30 @@
 	</div>
 </div>
 
-<div style="
-  background: red; /* For browsers that do not support gradients */
+<div class="container_one contactpage" style="background: red; /* For browsers that do not support gradients */
   background: -webkit-linear-gradient(black, #33273d); /* For Safari 5.1 to 6.0 */
   background: -o-linear-gradient(black, #33273d); /* For Opera 11.1 to 12.0 */
   background: -moz-linear-gradient(black, #33273d); /* For Firefox 3.6 to 15 */
   background: linear-gradient(black, #33273d); /* Standard syntax */
-  width: 100vw; height: 105vh" class="container_one contactpage">
+  width: 100vw; height: 105vh" >
   <img src="images/city_contact.png" class="img_contact" id="contactme" alt="city">
   <!-- <body background="images/marbleBlack.jpg" class="img_img"> -->
     <div class="container_two contact">
       <div class="container_contacts">
-        <h4 class="email"><a href="mailto:edwinfcau@gmail.com?subject= Hi Edwin" class="email">edwinfcau@gmail.com</a></h4><br class="imac displaynone"><br class="imac displaynone"><br class="imac displaynone"><br class="imac displaynone">
-        <h4 class="linkedin"><a href="http://www.linkedin.com/in/eaudesign" target="_blank"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a></h4><br class="imac displaynone"><br class="imac displaynone">
-        <h4 class="facebook"><a href="http://www.facebook.com/eauwind" target="_blank"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a></h4><br class="imac displaynone"><br class="imac displaynone">
-        <h4 class="instagram"><a href="http://www.instagram.com/myster_edwin" target="_blank"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a></h4><br class="imac displaynone"><br class="imac displaynone">
+        <h4 class="email"><a href="mailto:edwinfcau@gmail.com?subject= Hi Edwin" class="email">edwinfcau@gmail.com</a></h4>
+		  <br class="imac displaynone"><br class="imac displaynone">
+		  <br class="imac displaynone"><br class="imac displaynone">
+        <h4 class="linkedin"><a href="http://www.linkedin.com/in/eaudesign" target="_blank"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a></h4>
+		  <br class="imac displaynone"><br class="imac displaynone">
+        <h4 class="facebook"><a href="http://www.facebook.com/eauwind" target="_blank"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a></h4>
+		  <br class="imac displaynone"><br class="imac displaynone">
+        <h4 class="instagram"><a href="http://www.instagram.com/myster_edwin" target="_blank"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a></h4>
+		  <br class="imac displaynone"><br class="imac displaynone">
       </div>
     </div>
 </div>
 
-<div id="toTop"><a href="#backtotop" target="" title="Top"><i class="fa fa-angle-double-up"></i>top</a></div>
+<div id="totop"><a href="#backtotop" target="" title="top"><i class="fa fa-angle-double-up"></i>top</a></div>
 
 
 
