CV 85vh and mobile quote color

--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
       </div>
     </div>
 
-    <div style="background: linear-gradient(27deg, #151515 5px, transparent 5px) 0 5px; linear-gradient(207deg, #151515 5px, transparent 5px) 10px 0px; linear-gradient(27deg, #222 5px, transparent 5px) 0px 10px; linear-gradient(207deg, #222 5px, transparent 5px) 10px 5px; linear-gradient(90deg, #1b1b1b 10px, transparent 10px); linear-gradient(#1d1d1d 25%, #1a1a1a 25%, #1a1a1a 50%, transparent 50%, transparent 75%, #242424 75%, #242424); background-color: #131313; background-size: 20px 20px; width: 100vw;" class="img_relative labtop" id="resume_pdf">
+	    <!-- In a Nutsell -->
+
+	  
+    <div class="img_relative labtop" id="resume_pdf" style="background: linear-gradient(27deg, #151515 5px, transparent 5px) 0 5px; linear-gradient(207deg, #151515 5px, transparent 5px) 10px 0px; linear-gradient(27deg, #222 5px, transparent 5px) 0px 10px; linear-gradient(207deg, #222 5px, transparent 5px) 10px 5px; linear-gradient(90deg, #1b1b1b 10px, transparent 10px); linear-gradient(#1d1d1d 25%, #1a1a1a 25%, #1a1a1a 50%, transparent 50%, transparent 75%, #242424 75%, #242424); background-color: #131313; background-size: 20px 20px; width: 100vw;">
       <img src="images/plant.png" class="img_absolute img_plant" alt="plant">
       <img src="images/labtop.png" class="img_absolute img_labtop" alt="laptop">
     
@@ -60,7 +63,7 @@
           <div class="imac displaynone">
             <p class="hello" id="hello">Who I am<br class="imac displaynone">& what I DO... </p><br>
             <!-- <hr class="white_break"> -->
-            <p class="i_believe">I believe websites should inspire people's lives. <br class="imac displaynone"> <span class="italic">Are we on the same page?</span> </p>
+            <p class="i_believe">I believe digital products should inspire and enhance people's lives. <br class="imac displaynone"> <span class="italic">Are we on the same page?</span> </p>
 
           </div>
           <div class="row nut">
@@ -167,7 +170,7 @@
         <div class="rendezverbage imac displaynone">
           <span class="italics">RendezYou</span> is a web app that tucks itself neatly in the travel and tourism sector, connecting travellers with 'out of the box' tours given by locals. Users log on with the freedom to create tours as a <span class="italics">TOURGUIDE</span>; or kick back as a <span class="italics">TOURIST</span> and browse through our database of tours - created by users, for the users.<br><br>
           <span class="italics">RendezYou</span> was developed with two other web developers as a final project at BitMaker Labs.<br><br>
-          <span class="red">Built on:</span> Ruby, Rails, HTML, CSS, JavaScript, JQuery, PostGres, SQL, AJAX, Google Maps.
+          <span class="red">Built on:</span> Ruby, Rails, HTML, CSS, JavaScript, JQuery, PostGres, SQL, AJAX, Google Maps API.
         </div>
 
         <div class="col-md-6 img">
@@ -179,12 +182,11 @@
           <img src="images/Rendez 6.jpg" class="img_rendez" alt="My image" />
           <img src="images/Rendez 7.jpg" class="img_rendez" alt="My image" />
           <img src="images/Rendez 8.jpg" class="img_rendez" alt="My image" />
-
-
         </div>
+		  
         <br class="imac displaynone"><br class="imac displaynone">
 
-        <a href="https://rendezyou.herokuapp.com/" target="_blank" title="RendezYou" class="rendeztake imac displaynone" id="take_me_there_iphone">Take me there!  <i class="fa fa-mail-forward fontawesomepadding"> </i></a>
+        <a href="https://rendezyou.herokuapp.com/" target="_blank" title="RendezYou" class="rendeztake imac displaynone" id="take_me_there_iphone">Go to RendezYou <i class="fa fa-mail-forward fontawesomepadding"> </i></a>
 
         <div class="col-md-6 rendezdes ipad displaynone">
           <div class="rendezverbage">
@@ -257,15 +259,22 @@
               <div class="carousel-caption">
               </div>
             </div>
-			  <div> <a class="left carousel-control" href="#carousel-768363" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a> <a class="right carousel-control" href="#carousel-768363" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a></div>
-      </div>
+			  <div> 
+				  <a class="left carousel-control" href="#carousel-768363" data-slide="prev">
+					  <span class="glyphicon glyphicon-chevron-left"></span></a>
+				  <a class="right carousel-control" href="#carousel-768363" data-slide="next">
+					  <span class="glyphicon glyphicon-chevron-right"></span></a>
+			  </div>
+			</div>
     <!-- </div class="row carousel"> -->
   		</div>
 	  </div>
 	</div>
 </div>
+	  
+	  <!-- contact page -->
 
-<div class="container_one contactpage" style="background: red; /* For browsers that do not support gradients */
+<div class="container_one contactpage" style="background: red;
   background: -webkit-linear-gradient(black, #33273d); /* For Safari 5.1 to 6.0 */
   background: -o-linear-gradient(black, #33273d); /* For Opera 11.1 to 12.0 */
   background: -moz-linear-gradient(black, #33273d); /* For Firefox 3.6 to 15 */
