--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="col-md-10 ipad displaynone">
               <p class="hello"> <br><br>Who I am & what I DO... </p><br>
               <!-- <hr class="white_break"> -->
-              <p class="i_believe">I believe websites should inspire people's lives. <br class="medialabtopnone">  <span class="italic">Are we on the same page?</span> </p>
+              <p class="i_believe">I believe digital products should inspire and enhance people's lives. <br class="medialabtopnone">  <span class="italic">Are we on the same page?</span> </p>
 
             </div>
 
