laptop and contacts

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           </div>
           <div class="row nut">
             <div class="col-md-10 ipad displaynone">
-              <p class="hello"> <br><br>Who I am & what I DO... </p><br>
+              <p class="hello"> <br><br>Who I am & <br> what I DO... </p><br>
               <!-- <hr class="white_break"> -->
               <p class="i_believe">I believe digital products should inspire and enhance people's lives. <br class="medialabtopnone">  <span class="italic">Are we on the same page?</span> </p>
 
