--- a/index.html
+++ b/index.html
@@ -61,16 +61,16 @@
 	<div class="container_nut">
 		<div class="container-fluid nut">
           <div class="imac displaynone">
-            <p class="hello" id="hello">Who I am<br class="imac displaynone">& what I DO... </p><br>
+            <p class="hello" id="hello">Who I am<br class="imac displaynone">& what I DO...</p><br>
             <!-- <hr class="white_break"> -->
-            <p class="i_believe">I believe digital products should inspire and enhance people's lives. <br class="imac displaynone"> <span class="italic">Are we on the same page?</span> </p>
+            <p class="i_believe">"I believe digital products should inspire and enhance people's lives."<br class="imac displaynone"> <span class="italic">Are we on the same page?</span></p>
 
           </div>
           <div class="row nut">
             <div class="col-md-10 ipad displaynone">
-              <p class="hello"> <br><br>Who I am & <br> what I DO... </p><br>
+              <p class="hello"><br><br>Who I am &<br>what I DO...</p><br>
               <!-- <hr class="white_break"> -->
-              <p class="i_believe">I believe digital products should inspire and enhance people's lives. <br class="medialabtopnone">  <span class="italic">Are we on the same page?</span> </p>
+              <p class="i_believe">"I believe digital products should inspire and enhance people's lives."<br class="medialabtopnone">  <span class="italic">Are we on the same page?</span></p>
 
             </div>
 
