--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 		  <br class="imac displaynone"><br class="imac displaynone">
         <h4 class="facebook"><a href="http://www.facebook.com/eauwind" target="_blank"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a></h4>
 		  <br class="imac displaynone"><br class="imac displaynone">
-        <h4 class="instagram"><a href="" target="_blank" title="Available upon request"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a></h4>
+        <h5 class="instagram2" title="Available upon request"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></h5>
 		  <br class="imac displaynone"><br class="imac displaynone">
       </div>
     </div>
