--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <body>
 
 
-    <div class="container_one intro" style="background: -webkit-linear-gradient(-170deg,#001f72, #3a75bb, #94c5ff);
+    <div class="container_one intro" style="background: -webkit-linear-gradient(-180deg,#001f72, #3a75bb, #94c5ff);
     background: -o-linear-gradient(-170deg,#001f72, #3a75bb, #94c5ff);
     background: -moz-linear-gradient(-170deg,#001f72, #3a75bb, #94c5ff);
     background: linear-gradient(-170deg,#001f72, #3a75bb, #94c5ff);"  id="backtotop">
@@ -36,7 +36,7 @@
       <img src="images/introcloud3.png" class="img_introcloud3" alt="cloud3">
 
       <!-- <img src="images/introcloud1.png" class="img_introcloud1"> -->
-      <img src="images/intrograss.png" class="img_intrograss" id="intrograss" alt="grass">
+      <img src="images/intrograss.jpg" class="img_intrograss" id="intrograss" alt="grass">
 
 
   <!-- <body background="images/marbleWhite.jpg" class="img_img"> -->
@@ -54,27 +54,32 @@
 	    <!-- In a Nutsell -->
 
 	  
-    <div class="img_relative labtop" id="resume_pdf" style="background: linear-gradient(27deg, #151515 5px, transparent 5px) 0 5px; linear-gradient(207deg, #151515 5px, transparent 5px) 10px 0px; linear-gradient(27deg, #222 5px, transparent 5px) 0px 10px; linear-gradient(207deg, #222 5px, transparent 5px) 10px 5px; linear-gradient(90deg, #1b1b1b 10px, transparent 10px); linear-gradient(#1d1d1d 25%, #1a1a1a 25%, #1a1a1a 50%, transparent 50%, transparent 75%, #242424 75%, #242424); background-color: #131313; background-size: 20px 20px; width: 100vw;">
-      <img src="images/plant.png" class="img_absolute img_plant" alt="plant">
-      <img src="images/labtop.png" class="img_absolute img_labtop" alt="laptop">
+<div class="img_relative labtop" id="resume_pdf" style="background-color: #131313; background-size: 20px 20px; width: 100vw;">
+	  
+    <!--<div class="img_relative labtop" id="resume_pdf" style="background: linear-gradient(270deg, #151515 5px, transparent 5px) 0 5px; linear-gradient(207deg, #151515 5px, transparent 5px) 10px 0px; linear-gradient(27deg, #222 5px, transparent 5px) 0px 10px; linear-gradient(207deg, #222 5px, transparent 5px) 10px 5px; linear-gradient(90deg, #1b1b1b 10px, transparent 10px); linear-gradient(#1d1d1d 25%, #1a1a1a 25%, #1a1a1a 50%, transparent 50%, transparent 75%, #242424 75%, #242424); background-color: #131313; background-size: 20px 20px; width: 100vw;"> -->
+
     
 	<div class="container_nut">
 		<div class="container-fluid nut">
+			
+		<img src="images/plant.jpg" class="img_absolute img_plant" alt="plant">
+		<img src="images/labtop.png" class="img_absolute img_labtop" alt="laptop">
+			
           <div class="imac displaynone">
             <p class="hello" id="hello">Who I am<br class="imac displaynone">& what I DO...</p><br>
             <!-- <hr class="white_break"> -->
             <p class="i_believe">"I believe digital products should inspire and enhance people's lives."<br class="imac displaynone"> <span class="italic">Are we on the same page?</span></p>
 
           </div>
-          <div class="row nut">
-            <div class="col-md-10 ipad displaynone">
+			
+            <div class="ipad displaynone">
               <p class="hello"><br><br>Who I am &<br>what I DO...</p><br>
               <!-- <hr class="white_break"> -->
               <p class="i_believe">"I believe digital products should inspire and enhance people's lives."<br class="medialabtopnone">  <span class="italic">Are we on the same page?</span></p>
 
             </div>
 
-            <div class="col-md-12" id="labtopresumewidth">
+            <div class="" id="labtopresumewidth">
               <a href="EDWIN AU.pdf" target="_blank"><img src="images/EDWIN AU.jpg" alt="resume" title="Download PDF" class="resume_pdf"></a>
             </div>
           </div>
@@ -220,42 +225,42 @@
           </ol>
           <div class="carousel-inner">
             <div class="item active" data-interval="1000">
-              <img alt="Carousel Bootstrap First" src="images/EDWIN AU - Portfolio -01 - Cover.jpg" class="portfolio_images">
+              <img alt="Carousel Bootstrap First" src="images/Port-Cover.jpg" class="portfolio_images">
             </div>
             <div class="item">
-              <img alt="Carousel Bootstrap Second" src="images/EDWIN AU - Portfolio - 02 - Mickey 100.jpg" class="portfolio_images">
+              <img alt="Carousel Bootstrap Second" src="images/Port-Mickey100.jpg" class="portfolio_images">
             </div>
             <div class="item">
-              <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 03 - D&G.jpg" class="portfolio_images">
+              <img alt="Carousel Bootstrap Third" src="images/Port-DG.jpg" class="portfolio_images">
             </div>
             <div class="item">
-              <img alt="Carousel Third" src="images/EDWIN AU - Portfolio - 04 - National.jpg" class="portfolio_images">
+              <img alt="Carousel Third" src="images/Port-National.jpg" class="portfolio_images">
             </div>
             <div class="item">
-              <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 04 - Nobis Layout.jpg" class="portfolio_images">
+              <img alt="Carousel Bootstrap Third" src="images/Port-Nobis.jpg" class="portfolio_images">
             </div>
             <div class="item">
-              <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 05 - Mred Womens.jpg" class="portfolio_images">
+              <img alt="Carousel Bootstrap Third" src="images/Port-Mred-W.jpg" class="portfolio_images">
             </div>
             <div class="item">
-              <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 06 - Eviv.jpg" class="portfolio_images">
+              <img alt="Carousel Bootstrap Third" src="images/Port-Evivjpg" class="portfolio_images">
             </div>
             <div class="item">
-              <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 07 - Disney Product.jpg" class="portfolio_images">
+              <img alt="Carousel Bootstrap Third" src="images/Port-Disney-Products.jpg" class="portfolio_images">
             </div>
             <div class="item">
-              <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 08 - Disney Alice.jpg" class="portfolio_images">
+              <img alt="Carousel Bootstrap Third" src="images/Port-Disney-Alice.jpg" class="portfolio_images">
             </div>
             <div class="item">
-              <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 10 - Mred Mens.jpg" class="portfolio_images">
+              <img alt="Carousel Bootstrap Third" src="images/Port-Mred-Mens.jpg" class="portfolio_images">
             </div>
             <div class="item">
-              <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 14- starwars.jpg" class="portfolio_images">
+              <img alt="Carousel Bootstrap Third" src="images/Port-Starwars.jpg" class="portfolio_images">
               <div class="carousel-caption">
               </div>
             </div>
             <div class="item">
-              <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 14 - Clarkes-01.jpg" class="portfolio_images">
+              <img alt="Carousel Bootstrap Third" src="images/Port-Blakes.jpg" class="portfolio_images">
               <div class="carousel-caption">
               </div>
             </div>
