--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 
 
     <div class="container_one intro" style="background: -webkit-linear-gradient(-180deg,#001f72, #3a75bb, #94c5ff);
-    background: -o-linear-gradient(-170deg,#001f72, #3a75bb, #94c5ff);
-    background: -moz-linear-gradient(-170deg,#001f72, #3a75bb, #94c5ff);
-    background: linear-gradient(-170deg,#001f72, #3a75bb, #94c5ff);"  id="backtotop">
+    background: -o-linear-gradient(-180deg,#001f72, #3a75bb, #94c5ff);
+    background: -moz-linear-gradient(-180deg,#001f72, #3a75bb, #94c5ff);
+    background: linear-gradient(-180deg,#001f72, #3a75bb, #94c5ff);"  id="backtotop">
       <img src="images/introcloud1.png" class="img_introcloud1" alt="cloud1">
       <img src="images/introcloud2.png" class="img_introcloud2" alt="cloud2">
       <img src="images/introcloud3.png" class="img_introcloud3" alt="cloud3">
@@ -54,7 +54,10 @@
 	    <!-- In a Nutsell -->
 
 	  
-<div class="img_relative labtop" id="resume_pdf" style="background-color: #131313; background-size: 20px 20px; width: 100vw;">
+<div class="img_relative labtop" id="resume_pdf" style="background-color: #151515; background-size: 20px 20px; width: 100vw;">
+	
+	<img src="images/plant.jpg" class="img_absolute img_plant" alt="plant">
+		<img src="images/labtop.png" class="img_absolute img_labtop" alt="laptop">
 	  
     <!--<div class="img_relative labtop" id="resume_pdf" style="background: linear-gradient(270deg, #151515 5px, transparent 5px) 0 5px; linear-gradient(207deg, #151515 5px, transparent 5px) 10px 0px; linear-gradient(27deg, #222 5px, transparent 5px) 0px 10px; linear-gradient(207deg, #222 5px, transparent 5px) 10px 5px; linear-gradient(90deg, #1b1b1b 10px, transparent 10px); linear-gradient(#1d1d1d 25%, #1a1a1a 25%, #1a1a1a 50%, transparent 50%, transparent 75%, #242424 75%, #242424); background-color: #131313; background-size: 20px 20px; width: 100vw;"> -->
 
@@ -62,8 +65,7 @@
 	<div class="container_nut">
 		<div class="container-fluid nut">
 			
-		<img src="images/plant.jpg" class="img_absolute img_plant" alt="plant">
-		<img src="images/labtop.png" class="img_absolute img_labtop" alt="laptop">
+
 			
           <div class="imac displaynone">
             <p class="hello" id="hello">Who I am<br class="imac displaynone">& what I DO...</p><br>
@@ -72,14 +74,17 @@
 
           </div>
 			
-            <div class="ipad displaynone">
-              <p class="hello"><br><br>Who I am &<br>what I DO...</p><br>
+				<div class="row nut">
+				<div class="col-md-10 ipad displaynone">
+
+
+			              <p class="hello"><br><br>Who I am &<br>what I DO...</p><br>
               <!-- <hr class="white_break"> -->
               <p class="i_believe">"I believe digital products should inspire and enhance people's lives."<br class="medialabtopnone">  <span class="italic">Are we on the same page?</span></p>
 
             </div>
 
-            <div class="" id="labtopresumewidth">
+            <div class="col-nd-12" id="labtopresumewidth">
               <a href="EDWIN AU.pdf" target="_blank"><img src="images/EDWIN AU.jpg" alt="resume" title="Download PDF" class="resume_pdf"></a>
             </div>
           </div>
