--- a/index.html
+++ b/index.html
@@ -65,32 +65,32 @@
 	<div class="container_nut">
 		<div class="container-fluid nut">
 			
+			<div class="row nut">
 
-			
-          <div class="imac displaynone">
-            <p class="hello" id="hello">Who I am<br class="imac displaynone">& what I DO...</p><br>
-            <!-- <hr class="white_break"> -->
-            <p class="i_believe">"I believe digital products should inspire and enhance people's lives."<br class="imac displaynone"> <span class="italic">Are we on the same page?</span></p>
 
-          </div>
+				 <div class="imac displaynone">
+					<p class="hello" id="hello">Who I am<br class="imac displaynone">& what I DO...</p><br>
+					<!-- <hr class="white_break"> -->
+					<p class="i_believe">"I believe digital products should inspire and enhance people's lives."<br class="imac displaynone"> <span class="italic">Are we on the same page?</span></p>
+
+				  </div>
 			
-				<div class="row nut">
 				<div class="col-md-10 ipad displaynone">
+					<p class="hello"><br><br>Who I am &<br>what I DO...</p><br>
+					  <!-- <hr class="white_break"> -->
+					<p class="i_believe">"I believe digital products should inspire and enhance people's lives."<br class="medialabtopnone">  <span class="italic">Are we on the same page?</span></p>
+				</div>
 
+				<div class="col-nd-12" id="labtopresumewidth">
+					  <a href="EDWIN AU.pdf" target="_blank"><img src="images/EDWIN AU.jpg" alt="resume" title="Download PDF" class="resume_pdf"></a>
+				</div>
 
-			              <p class="hello"><br><br>Who I am &<br>what I DO...</p><br>
-              <!-- <hr class="white_break"> -->
-              <p class="i_believe">"I believe digital products should inspire and enhance people's lives."<br class="medialabtopnone">  <span class="italic">Are we on the same page?</span></p>
-
-            </div>
-
-            <div class="col-nd-12" id="labtopresumewidth">
-              <a href="EDWIN AU.pdf" target="_blank"><img src="images/EDWIN AU.jpg" alt="resume" title="Download PDF" class="resume_pdf"></a>
-            </div>
-          </div>
-        </div>
+          </div> <!--row nut-->
+			
+			
       </div>
-    </div>
+      </div>
+</div>
 
 
 
