--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <img src="images/introcloud3.png" class="img_introcloud3" alt="cloud3">
 
       <!-- <img src="images/introcloud1.png" class="img_introcloud1"> -->
-      <img src="images/intrograss.png" class="img_intrograss" id="intrograss" alt="grass">
+      <img src="images/intrograss.jpg" class="img_intrograss" id="intrograss" alt="grass">
 
 
   <!-- <body background="images/marbleWhite.jpg" class="img_img"> -->
@@ -237,15 +237,11 @@
             <div class="item">
               <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 05 - Mred Womens.jpg" class="portfolio_images">
             </div>
-            <div class="item">
-              <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 06 - Eviv.jpg" class="portfolio_images">
-            </div>
+
             <div class="item">
               <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 07 - Disney Product.jpg" class="portfolio_images">
             </div>
-            <div class="item">
-              <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 08 - Disney Alice.jpg" class="portfolio_images">
-            </div>
+ 
             <div class="item">
               <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 10 - Mred Mens.jpg" class="portfolio_images">
             </div>
