--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 					</tr>
 					<tr>
 						<td>
-							<p style="font-size:6px; font-weight: bold; text-align: right; font-family: 'Lato', sans-serif; padding: 5px 0;"> About This Page</p>
+							<p style="font-size:6px; font-weight: bold; text-align: right; font-family: 'Lato', sans-serif; padding: 5px 0;"> About This Page::</p>
 							<p style="font-size:4px; font-weight: normal; text-align: right; font-family: 'Lato', sans-serif; padding: 10px 0;"> The Walt Disney Company Canada - My Winning ‘Mickey 100’ Design, Sold at UNIQLO - F/W 2016 &amp; S/S 2017<br>Click here and scroll down to view</p>
 						</td>
 					</tr>
