--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 			  
 		<div class="item">
 			<a href="https://www.blacksheepshop.net/blg" target="_blank" style="text-decoration: none; color: black;"><p style="font-size:12px; font-weight: bold; text-align: right; font-family: 'Lato', sans-serif; padding: 20px 30px 20px;"><b>Product Design for BLG Beyond, click to view landing page | 2020 - 2021</b></p>
-              <img alt="Carousel Bootstrap Third" src="images/blgwebstore-mobile.jpg" class="portfolio_images-mobile"></a>
+              <img alt="Carousel Bootstrap Third" src="images/beyond-mobile.jpg" class="portfolio_images-mobile"></a>
 			
 			
             </div>
