--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
         <h1 class="edwinname"><a href="http://www.linkedin.com/in/eaudesign" target="_blank">EDWIN&nbsp;AU</a></h1><br>
         <div class="container_three">
           <h2 class="left button-row"><a href="#hello" target="" title="ABOUT ME"></a></h2>
-		  <h2 class="center button-row"><a href="#carousel" title="PORTFOLIO"></a></h2>
+		  <h2 class="center button-row ipad displaynone"><a href="#carousel" title="PORTFOLIO"></a></h2>
+		  <h2 class="center button-row imac displaynone"><a href="#carouselmobile" title="PORTFOLIO"></a></h2>
 
           <h2 class="right button-row"><a href="#rendezlogo" target="" title="RendezYou"></a></h2>
           <h2 class="right_right button-row"><a href="#contactme" title="CONTACT"></a></h2>
