--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="container_three">
           <h2 class="left button-row"><a href="#hello" target="" title="ABOUT ME"></a></h2>
 		  <h2 class="center button-row ipad displaynone"><a href="#headermred" title="PORTFOLIO"></a></h2>
-		<h2 class="center button-row imac displaynone"><a href="#headermred" title="PORTFOLIO"></a></h2>
+		<h2 class="center button-row imac displaynone"><a href="#headermred" title="PORTFOLIOA"></a></h2>
 
           <h2 class="right button-row"><a href="#rendezlogo" target="" title="RendezYou"></a></h2>
           <h2 class="right_right button-row"><a href="#contactme" title="CONTACT"></a></h2>
