New portfolio design

--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
     <link href="stylesheet/app.css" type="text/css" rel="stylesheet">
     <link href="stylesheet/carousel.css" type="text/css" rel="stylesheet">
     <link href="stylesheet/contact.css" type="text/css" rel="stylesheet">
-    <link href="stylesheet/media_labtop.css" type="text/css" rel="stylesheet">
+    <link href="stylesheet/media_labtop_portfolio.css" type="text/css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
 
@@ -27,128 +27,9 @@
   <body>
 
 
-    <div class="container_one intro" style="background: -webkit-linear-gradient(-170deg,#001f72, #3a75bb, #94c5ff);
-    background: -o-linear-gradient(-170deg,#001f72, #3a75bb, #94c5ff);
-    background: -moz-linear-gradient(-170deg,#001f72, #3a75bb, #94c5ff);
-    background: linear-gradient(-170deg,#001f72, #3a75bb, #94c5ff);"  id="backtotop">
-      <img src="images/introcloud1.png" class="img_introcloud1" alt="cloud1">
-      <img src="images/introcloud2.png" class="img_introcloud2" alt="cloud2">
-      <img src="images/introcloud3.png" class="img_introcloud3" alt="cloud3">
-
-      <!-- <img src="images/introcloud1.png" class="img_introcloud1"> -->
-      <img src="images/intrograss.jpg" class="img_intrograss" id="intrograss" alt="grass">
-
-
-  <!-- <body background="images/marbleWhite.jpg" class="img_img"> -->
-      <div class="container_two">
-        <h1 class="edwinname"><a href="http://www.linkedin.com/in/eaudesign" target="_blank">EDWIN&nbsp;AU</a></h1><br>
-        <div class="container_three">
-          <h2 class="left button-row"><a href="#hello" target="" title="ABOUT ME"></a></h2>
-		  <h2 class="center button-row"><a href="portfolio.html" title="PORTFOLIO"></a></h2>
-        <!--  <h2 class="right button-row"><a href="#rendezlogo" target="" title="RendezYou"></a></h2> -->
-          <h2 class="right_right button-row"><a href="#contactme" title="CONTACT"></a></h2>
-        </div>
-      </div>
-    </div>
-
-	    <!-- In a Nutsell -->
-
-	  
-    <div class="img_relative labtop" id="resume_pdf" style="background: linear-gradient(27deg, #151515 5px, transparent 5px) 0 5px; linear-gradient(207deg, #151515 5px, transparent 5px) 10px 0px; linear-gradient(27deg, #222 5px, transparent 5px) 0px 10px; linear-gradient(207deg, #222 5px, transparent 5px) 10px 5px; linear-gradient(90deg, #1b1b1b 10px, transparent 10px); linear-gradient(#1d1d1d 25%, #1a1a1a 25%, #1a1a1a 50%, transparent 50%, transparent 75%, #242424 75%, #242424); background-color: #131313; background-size: 20px 20px; width: 100vw;">
-      <img src="images/plant.png" class="img_absolute img_plant" alt="plant">
-      <img src="images/labtop.png" class="img_absolute img_labtop" alt="laptop">
-    
-	<div class="container_nut">
-		<div class="container-fluid nut">
-          <div class="imac displaynone">
-            <p class="hello" id="hello">Who I am<br class="imac displaynone">&amp; what I do...</p><br>
-            <!-- <hr class="white_break"> -->
-            <p class="i_believe">"I believe digital products should inspire and enhance people's lives."<br class="imac displaynone"> <span class="italic">Are we on the same page?</span></p>
-
-          </div>
-          <div class="row nut">
-            <div class="col-md-10 ipad displaynone">
-              <p class="hello"><br><br>Who I am &amp;<br>what I do...</p><br>
-              <!-- <hr class="white_break"> -->
-              <p class="i_believe">"I believe digital products should inspire and enhance people's lives."<br class="medialabtopnone">  <span class="italic">Are we on the same page?</span></p>
-
-            </div>
-
-            <div class="col-md-12" id="labtopresumewidth">
-              <a href="EDWIN AU.pdf" target="_blank"><img src="images/EDWIN AU.jpg" alt="resume" title="Download PDF" class="resume_pdf"></a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-
-
-<!-- <div style="background-image: url(images/wood.png); width: 100vw; height: 50vh", class="img_relative carouselgradient"> -->
-
-<div class="container_relative ipadcarou ipad displaynone" id="quoteelon">
-
-  <div style="background-color: #131313; width: 100vw; height: 100vh" class="container_one quote_container quotezero">
-    <p class="sixtysix">&#8220;</p>
-    <div class="quote embossed container_two quotezero">Life is so short you can't waste even a day subscribing to what someone thinks you can do versus knowing what you can do.
-      <div class="elon_musk embossed container_two">- Virgil Abloh -</div>
-    </div>
-    <p class="ninetynine">&#8221;</p>
-  </div>
-
-
-  <div style="background-color: #131313; width: 100vw; height: 100vh" class="container_one quote_container quotenone">
-    <p class="sixtysix">&#8220;</p>
-    <div class="quote embossed container_two quotenone">Life is so short you can't waste even a day subscribing to what someone thinks you can do versus knowing what you can do.
-      <div class="elon_musk embossed container_two">- Virgil Abloh -</div>
-    </div>
-    <p class="ninetynine">&#8221;</p>
-  </div>
-
-
-  <div style="background-color: #494E6B; width:100vw; height:100vh" class="container_one quote_container quoteone">
-        <p class="sixtysix">&#8220;</p>
-    <div class="quote embossed container_two quoteone">Life is so short you can't waste even a day subscribing to what someone thinks you can do versus knowing what you can do.
-      <div class="elon_musk embossed container_two">- Virgil Abloh -</div>
-    </div>
-    <p class="ninetynine">&#8221;</p>
-
-  </div>
-
-  <div style="background-color: #123d00; width: 100vw; height: 100vh" class="container_one quote_container quotetwo">
-    <p class="sixtysix">&#8220;</p>
-
-    <div class="quote embossed container_two quotetwo">Life is so short you can't waste even a day subscribing to what someone thinks you can do versus knowing what you can do.
-      <div class="elon_musk embossed container_two">- Virgil Abloh -</div>
-    </div>
-    <p class="ninetynine">&#8221;</p>
-
-  </div>
-
-  <div style="background-color: #80BD9E;  width: 100vw; height: 100vh" class="container_one quote_container quotethree">
-    <p class="sixtysix">&#8220;</p>
-
-    <div class="quote embossed container_two quotethree">Life is so short you can't waste even a day subscribing to what someone thinks you can do versus knowing what you can do.
-      <div class="elon_musk embossed container_two">- Virgil Abloh -</div>
-    </div>
-    <p class="ninetynine">&#8221;</p>
-
-  </div>
-
-  <div style="background-color: #003B46; width: 100vw; height: 100vh" class="container_one quote_container quotefour">
-    <p class="sixtysix">&#8220;</p>
-    <div class="quote embossed container_two quotefour">Life is so short you can't waste even a day subscribing to what someone thinks you can do versus knowing what you can do.
-      <div class="elon_musk embossed container_two">- Virgil Abloh -</div>
-
-    </div>
-    <p class="ninetynine">&#8221;</p>
-  </div>
-
-</div>
-
 
 <!-- <div class="carolcarolcon Desktop"> -->
-<!--<div class="container_carousel" id="carousel">
+<div class="container_carousel" id="carousel">
 	
 		  	<table style="max-width: 810px; background-color: #000000; margin-left: auto; margin-right: auto; width: 100%;">
 				  	<tr>
@@ -156,26 +37,23 @@
 							<img alt="Carousel Bootstrap Second" src="images/2022-Address-Header.png" class="headermred" style="display: block; margin-left: auto; margin-right: auto; width: 100%;">
 						</td>
 					</tr>
-			</table>-->
+			</table>
 
-
-<!--
-	
   <div class="container-fluid ninetywidth ipad displaynone">
 	  
-     <div class="row carousel">
+    <!-- <div class="row carousel"> -->
 	<div class="col-md-12 nopadding">  
 		<div class="carousel slide" id="carousel-768363">
 			  <ol class="carousel-indicators">
 			  </ol>
 			<div class="carousel-inner">
 				<div class="item active">
-						<a href="https://www.blacksheepshop.net/blg" target="_blank" style="text-decoration: none; color: black;"><p style="font-size:14px; font-weight: bold; text-align: right; font-family: 'Lato', sans-serif; padding: 20px 30px 20px;"><b>UX UI design involvement of BLG Merchandise Store, click to view landing page | 2022</b></p>
+						<a href="https://www.blacksheepshop.net/blg" target="_blank" style="text-decoration: none; color: black;"><p style="font-size:14px; font-weight: bold; text-align: right; font-family: 'Lato', sans-serif; padding: 20px 30px 20px;"><b>Involvement in UX UI design for the BLG Merchandise Store, click to view page | 2022</b></p>
 				  <img alt="Carousel Bootstrap Third" src="images/blgwebstore.jpg" class="portfolio_images_76w"></a>
 				</div>  
 
 				<div class="item">
-				<a href="https://www.blg.com/en/services/blg-beyond" target="_blank" style="text-decoration: none; color: black;"><p style="font-size:14px; font-weight: bold; text-align: right; font-family: 'Lato', sans-serif; padding: 20px 30px 20px;"><b>Product Design for BLG Beyond, click to view landing page | 2020 - 2021</b></p>
+				<a href="https://www.blg.com/en/services/blg-beyond" target="_blank" style="text-decoration: none; color: black;"><p style="font-size:14px; font-weight: bold; text-align: right; font-family: 'Lato', sans-serif; padding: 20px 30px 20px;"><b>Product Design for BLG Beyond, click to view page | 2020 - 2021</b></p>
 				  <img alt="Carousel Bootstrap Third" src="images/beyond.jpg" class="portfolio_images"></a>
 				</div>  
 
@@ -237,15 +115,17 @@
 				  </div>
 				</div>
 
+		<!-- </div class="row carousel"> -->
 			</div>
 	  </div>
-	</div> -->
+	</div>
+	  
 	  
 <!-- <div class="carolcarolcon Mobile"> -->
 
-	<!--
   <div class="container-fluid ninetywidth imac displaynone">
 
+    <!-- <div class="row carousel"> -->
       <div class="col-md-12 nopadding">
 		  
         <div class="carousel slide" id="carousel-768363-mobile">
@@ -256,7 +136,7 @@
             <li data-slide-to="1" data-target="#carousel-768363-mobile">
             </li>
             <li data-slide-to="2" data-target="#carousel-768363-mobile">
-            </li> 
+            </li> -->
           </ol>
           <div class="carousel-inner mobile">
 
@@ -351,11 +231,13 @@
 			  </div>
 			</div>
 
+    <!-- </div class="row carousel"> -->
   		</div>
 	  </div>
 	</div>
 	
-</div>	 -->
+</div>	  
+	  
 <!-- rendez you -->
   <!-- <div style="
 
@@ -366,11 +248,11 @@
     radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 8px 9px;
     background-color: #2d1c17;
     background-size:16px 16px;
-    width: 100vw; height 100vh; class="img_relative rendez", id="rendezlogo"> -->
+    width: 100vw; height 100vh; class="img_relative rendez", id="rendezlogo">
 
-   <!-- <div style="background: radial-gradient(circle at center, gainsboro 0, lightgrey, grey 100%); width: 100vw; height 100vh;" class="img_relative rendez" id="rendezlogo">-->
+    <div style="background: radial-gradient(circle at center, gainsboro 0, lightgrey, grey 100%); width: 100vw; height 100vh;" class="img_relative rendez" id="rendezlogo">
 
-    <!-- <div style="background-image: url(images/wood.jpg); width: 100vw; height: 100vh", class="img_relative carouselgradient"> 
+     <div style="background-image: url(images/wood.jpg); width: 100vw; height: 100vh", class="img_relative carouselgradient"> 
 
     <div class="container_two rendez">
       <div class="rendezlogo">RendezYOU</div>
@@ -413,18 +295,17 @@
   </div>
 -->	  
 	  
-	  
 	  <!-- contact page -->
-
+<!--
 <div class="container_one contactpage" style="background: red;
-  background: -webkit-linear-gradient(#131313, #33273d, #ee5d6c); /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(#131313, #33273d, #ee5d6c); /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(131313, #33273d, #ee5d6c); /* For Firefox 3.6 to 15 */
-  background: linear-gradient(131313, #33273d, #ee5d6c); /* Standard syntax */
+  background: -webkit-linear-gradient(white, orange, red, #ee5d6c, #ce4993, #6a0d83); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(white, orange, red, #ee5d6c, #ce4993, #ce4993); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(bwhite, orange, red, #ee5d6c, #ce4993, #6a0d83); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(white, orange, red, #ee5d6c, #ce4993, #6a0d83); /* Standard syntax */
   width: 100vw; height: 105vh" >
   <img src="images/city_contact.png" class="img_contact" id="contactme" alt="city">
   <!-- <body background="images/marbleBlack.jpg" class="img_img"> -->
-    <div class="container_two contact">
+  <!--  <div class="container_two contact">
       <div class="container_contacts">
         <h4 class="email"><a href="mailto:edwinfcau@gmail.com?subject= Hi Edwin" class="email">edwinfcau@gmail.com</a></h4>
 		  <br class="imac displaynone"><br class="imac displaynone">
@@ -438,8 +319,9 @@
       </div>
     </div>
 </div>
-
-<!-- <div class="totop"><a href="#backtotop" target="" title="top"><i class="fa fa-angle-double-up"></i>top</a></div> -->
+-->
+	  
+<div id="totop"><a href="index.html" target="" title="top"><i class="fa fa-angle-double-left"></i>&nbsp;&nbsp;home</a></div>
 
 
 
