--- a/index.html
+++ b/index.html
@@ -417,10 +417,10 @@
 	  <!-- contact page -->
 
 <div class="container_one contactpage" style="background: red;
-  background: -webkit-linear-gradient(#131313, #33273d, #ee5d6c); /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(#131313, #33273d, #ee5d6c); /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(131313, #33273d, #ee5d6c); /* For Firefox 3.6 to 15 */
-  background: linear-gradient(131313, #33273d, #ee5d6c); /* Standard syntax */
+  background: -webkit-linear-gradient(#131313, #33273d, #ee5d6c, #FC9C54); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(#131313, #33273d, #ee5d6c, #FC9C54); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(131313, #33273d, #ee5d6c, #FC9C54); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(131313, #33273d, #ee5d6c, #FC9C54); /* Standard syntax */
   width: 100vw; height: 105vh" >
   <img src="images/city_contact.png" class="img_contact" id="contactme" alt="city">
   <!-- <body background="images/marbleBlack.jpg" class="img_img"> -->
@@ -431,9 +431,9 @@
 		  <br class="imac displaynone"><br class="imac displaynone">
         <h4 class="linkedin" title="Click to view LinkedIn"><a href="http://www.linkedin.com/in/eaudesign" target="_blank"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a></h4>
 		  <br class="imac displaynone"><br class="imac displaynone">
-        <h4 class="facebook" title="Click to view facebook (Currently Inactive)"><a href="http://www.facebook.com/eauwind" target="_blank"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a></h4>
+        <h4 class="facebook" title="Click to view Facebook"><a href="http://www.facebook.com/eauwind" target="_blank"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a></h4>
 		  <br class="imac displaynone"><br class="imac displaynone">
-        <h4 class="whatsapp" title="+14168803791"><a href="tel:+14168803791" title="+14168803791"><i class="fa fa-whatsapp fa-2x" aria-hidden="true"></i></a></h4>
+        <h4 class="instagram1" title="+14168803791"><a href="tel:+14168803791" title="+14168803791"><i class="fa fa-whatsapp fa-2x" aria-hidden="true"></i></a></h4>
 		  <br class="imac displaynone"><br class="imac displaynone">
       </div>
     </div>
