--- a/portfolio.html
+++ b/portfolio.html
@@ -7,13 +7,13 @@
     <link href="stylesheet/bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab|Oswald|Lato|Raleway|Cabin+Sketch|Pacifico" rel="stylesheet">
     <link href="stylesheet/reset.css" type="text/css" rel="stylesheet">
-    <link href="stylesheet/marbWhite.css" type="text/css" rel="stylesheet">
+    <link href="stylesheet/marbWhite_portfolio.css" type="text/css" rel="stylesheet">
     <link href="stylesheet/nut.css" type="text/css" rel="stylesheet">
     <link href="stylesheet/quote.css" type="text/css" rel="stylesheet">
     <link href="stylesheet/app.css" type="text/css" rel="stylesheet">
     <link href="stylesheet/carousel.css" type="text/css" rel="stylesheet">
     <link href="stylesheet/contact.css" type="text/css" rel="stylesheet">
-    <link href="stylesheet/media_labtop_portfolio.css" type="text/css" rel="stylesheet">
+    <link href="stylesheet/media_labtop.css" type="text/css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
 
@@ -34,11 +34,13 @@
 		  	<table style="max-width: 810px; background-color: #000000; margin-left: auto; margin-right: auto; width: 100%;">
 				  	<tr>
 						<td>
-							<img alt="Carousel Bootstrap Second" src="images/2022-Address-Header.png" class="headermred" style="display: block; margin-left: auto; margin-right: auto; width: 100%;">
+							<img alt="Carousel Bootstrap Second" src="images/2022-Address-Header.jpg" class="headermred" style="display: block; margin-left: auto; margin-right: auto; width: 100%;">
 						</td>
 					</tr>
-			</table>
+			</table> 
 
+
+	
   <div class="container-fluid ninetywidth ipad displaynone">
 	  
     <!-- <div class="row carousel"> -->
@@ -48,7 +50,7 @@
 			  </ol>
 			<div class="carousel-inner">
 				<div class="item active">
-						<a href="https://www.blacksheepshop.net/blg" target="_blank" style="text-decoration: none; color: black;"><p style="font-size:14px; font-weight: bold; text-align: right; font-family: 'Lato', sans-serif; padding: 20px 30px 20px;"><b>Involvement in UX UI design for the BLG Merchandise Store, click to view page | 2022</b></p>
+						<a href="https://www.blacksheepshop.net/blg" target="_blank" style="text-decoration: none; color: black;"><p style="font-size:14px; font-weight: bold; text-align: right; font-family: 'Lato', sans-serif; padding: 40px 30px 40px;"><b>Involvement in UX UI design for the BLG Merchandise Store, click to view page | 2022</b></p>
 				  <img alt="Carousel Bootstrap Third" src="images/blgwebstore.jpg" class="portfolio_images_76w"></a>
 				</div>  
 
@@ -230,12 +232,16 @@
 					  <span class="glyphicon glyphicon-chevron-right"></span></a>
 			  </div>
 			</div>
+		
 
     <!-- </div class="row carousel"> -->
+			</div>
   		</div>
+
 	  </div>
+
 	</div>
-	
+
 </div>	  
 	  
 <!-- rendez you -->
@@ -296,16 +302,16 @@
 -->	  
 	  
 	  <!-- contact page -->
-<!--
+
 <div class="container_one contactpage" style="background: red;
-  background: -webkit-linear-gradient(white, orange, red, #ee5d6c, #ce4993, #6a0d83); /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(white, orange, red, #ee5d6c, #ce4993, #ce4993); /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(bwhite, orange, red, #ee5d6c, #ce4993, #6a0d83); /* For Firefox 3.6 to 15 */
-  background: linear-gradient(white, orange, red, #ee5d6c, #ce4993, #6a0d83); /* Standard syntax */
+  background: -webkit-linear-gradient(white, #ffb288, #f1b351, #ee5d6c, #ff9e9e); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(white, #ffb288, #f1b351, #ee5d6c, #ff9e9e); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(white, #ffb288, #f1b351, #ee5d6c, #ff9e9e); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(white, #ffb288, #f1b351, #ee5d6c, #ff9e9e); /* Standard syntax */
   width: 100vw; height: 105vh" >
   <img src="images/city_contact.png" class="img_contact" id="contactme" alt="city">
   <!-- <body background="images/marbleBlack.jpg" class="img_img"> -->
-  <!--  <div class="container_two contact">
+<div class="container_two contact">
       <div class="container_contacts">
         <h4 class="email"><a href="mailto:edwinfcau@gmail.com?subject= Hi Edwin" class="email">edwinfcau@gmail.com</a></h4>
 		  <br class="imac displaynone"><br class="imac displaynone">
@@ -319,10 +325,11 @@
       </div>
     </div>
 </div>
--->
-	  
-<div id="totop"><a href="index.html" target="" title="top"><i class="fa fa-angle-double-left"></i>&nbsp;&nbsp;home</a></div>
 
+	  
+
+
+	  			<div class="totop"><a href="index.html" target="" title="top"><i class="fa fa-angle-double-left" ></i>&nbsp;&nbsp;home</a></div>
 
 
 
