--- a/portfolio-motion-social.html
+++ b/portfolio-motion-social.html
@@ -39,7 +39,7 @@
 	  
     <!-- <div class="row carousel"> -->
 	<div class="col-md-12 nopadding">  
-	<iframe src="/images/Edwin_Au_Motion-Portfolio-2023.pdf" width="100%" height="500px">
+	<iframe src="images/Edwin_Au_Motion-Portfolio-2023.pdf#toolbar=0" width="100%" height="500px" wmode="transparent" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no" style="border:0;">
     </iframe>
 	  </div>
 <!-- </div class="row carousel"> -->
