all links working?

--- a/portfolio-motion-social-to-delete.html
+++ b/portfolio-motion-social-to-delete.html
@@ -31,21 +31,20 @@
 				  	<tr>
 						<td>
 							<img alt="Carousel Bootstrap Second" src="images/2022-Address-Header-White.jpg" class="headermred" style="display: block; margin-left: auto; margin-right: auto; width: 100%;">
-						<p style="font-size:18px; font-weight: bold; text-align: right; font-family: 'Lato', sans-serif; padding: 40px 10px 25px; background-color: #fff;" >Motion graphics and social video examples | 2017 - present</p>
-					</td>
-				</tr>
+						</td>
+					</tr>
 			</table> 
 	
   <div class="container-fluid ninetywidth ipad displaynone">
 	  
     <!-- <div class="row carousel"> -->
 	<div class="col-md-12 nopadding">  
-	<iframe src="images/Edwin_Au_Motion-Portfolio-2023.pdf#toolbar=0" width="100%" height="482px" wmode="transparent" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no" style="border:0;">
+	<iframe src="images/Edwin_Au_Motion-Portfolio-2023.pdf#toolbar=0" width="100%" height="500px" wmode="transparent" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no" style="border:0;">
     </iframe>
 	  </div>
 <!-- </div class="row carousel"> -->
 
-</div>
+	</div>
 	  
 	  
 <!-- <div class="carolcarolcon Mobile"> -->
@@ -59,13 +58,13 @@
 			  </ol>
 			<div class="carousel-inner">
 				<div class="item active">
-						<p style="font-size:12px; font-weight: bold; text-align: right; font-family: 'Lato', sans-serif; padding: 40px 170px 25px;"><b>I enjoy using Color and Typography to enhance Designs | Blakes for Margaret Atwood event eVite - 2019</b></p>
-				  <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-1.jpg" class="portfolio_images_76w">
+						<a href="https://www.blacksheepshop.net/blg" target="_blank" style="text-decoration: none; color: black;"><p style="font-size:12px; font-weight: bold; text-align: right; font-family: 'Lato', sans-serif; padding: 40px 170px 25px;"><b>I enjoy using Color and Typography to enhance Designs | Blakes for Margaret Atwood event eVite - 2019</b></p>
+				  <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-1.jpg" class="portfolio_images_76w"></a>
 				</div>  
 
 				<div class="item">
-				<p style="font-size:12px; font-weight: bold; text-align: right; font-family: 'Lato', sans-serif; padding: 40px 170px 25px;"><b>One of my favourite Blakes HTML &amp; CSS projects - Shania Twain In Concert | Blakes for Shania Twain in Concert event eVite - 2018</b></p>
-				  <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-2.jpg" class="portfolio_images">
+				<a href="" target="_blank" style="text-decoration: none; color: black;"><p style="font-size:12px; font-weight: bold; text-align: right; font-family: 'Lato', sans-serif; padding: 40px 170px 25px;"><b>One of my favourite Blakes HTML &amp; CSS projects - Shania Twain In Concert | Blakes for Shania Twain in Concert event eVite - 2018</b></p>
+				  <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-2.jpg" class="portfolio_images"></a>
 				</div>  
 
 				<div class="item">
@@ -80,13 +79,10 @@
 					 <a class="right carousel-control" href="#carousel-768363" data-slide="next">
 					<span class="glyphicon glyphicon-chevron-right"></span></a>
 				  </div>
-				</div>
-
-		<!-- </div class="row carousel"> -->
 			</div>
+		</div>
 	  </div>
 	</div>
-		<!-- </div class="row carousel"> -->
 </div>
 
 
@@ -97,7 +93,7 @@
 		<td style="text-align: center; width: 500px;"><a href="https://edwinau.github.io/edwin-landing/portfolio.html" ><p style="color:blue; font-size: 17px; font-family: 'Lato', sans-serif; ">&#62;
  UX UI Portfolio</p></a>
 		</td>
-		<td style="text-align: center; width: 500px;"><a href="https://edwinau.github.io/edwin-landing/portfolio-coding.html" ><p style="color:blue; font-size: 17px; font-family: 'Lato', sans-serif; ">&#62; Coding &#40;Html &amp; CSS&#41; Portfolio</p></a>
+		<td style="text-align: center;"><a href="https://edwinau.github.io/edwin-landing/portfolio-motion-social.html" ><p style="color:blue; font-size: 17px; font-family: 'Lato', sans-serif; ">&#62; Motion Graphics and Social Video Portfolio</p></a>
 		</td>
 	</tr>
 	</table>
