--- a/portfolio.html
+++ b/portfolio.html
@@ -242,7 +242,20 @@
 
 	</div>
 
-</div>	  
+
+	  
+	  
+<div>
+	<table align="center" style="margin:auto; margin-top:35px;" height="100px">
+	<tr align="center" padding-bottom="150px;" >
+		<td style="text-align: center; width: 500px;"><a href="https://edwinau.github.io/edwin-landing/portfolio-coding.html" ><p style="color:blue; font-size: 17px; font-family: 'Lato', sans-serif; ">&#62; Coding &#40;Html &amp; CSS&#41; Portfolio</p></a>
+		</td>
+		<td style="text-align: center; width: 500px;"><a href="https://edwinau.github.io/edwin-landing/portfolio-motion-social.html" ><p style="color:blue; font-size: 17px; font-family: 'Lato', sans-serif; ">&#62; Motion Graphics and Social Videos Portfolio</p></a>
+		</td>
+	</tr>
+	</table>
+</div>
+	  
 	  
 <!-- rendez you -->
   <!-- <div style="
